--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@ function findMatches(wordToMatch, cities) {
         // here we need to figure out if the city or state matches what was searched
         const regex = new RegExp(wordToMatch, 'gi');
         return place.city.match(regex) || place.state.match(regex)
-    })
+    });
 }
 
 function displayMatches() {
-    
+    const matchArray = findMatches(this.value, cities);
+    const html = matchArray.map(place => {
+        return `
+            <li>
+                <span class="name">${place.city}, ${place.state}</span>
+                <span class="population">${place.population}</span>
+            </li>
+            `;
+    });
 }
 
 const searchInput = document.querySelector('.search');
